<resources>
    <string name="app_name">framelayout</string>
    <string name="title">Title</string>
    <string name="description">This is my first app where i can use different layout as such Recyleview and constriant layout</string>
    <string name="contacts">Contacts</string>
    <string name="calculator">calculator</string>
    <string name="plus">plus</string>
    <string name="minus">Minus</string>
    <string name="multiply">Multi</string>
    <string name="divide">Divide</string>
    <string name="title_activity_second">secondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Name">Name</string>
    <string name="hello_first_recyclerview">hello_first_recyclerview</string>
    <string name="PersonName">Person Name</string>
    <string name="search">Search</string>
    <string name="Undo">undo</string>
    <string name="Delete">Delete</string>
    <string name="Add">add</string>
    <string name="favorites">Favorites</string>
    <string name="music">music</string>
    <string name="places">places</string>
    <string name="news">News</string>
    <string name="date">Date</string>
</resources>
