<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:elevation="@dimen/_8sdp"
    android:orientation="vertical"
    app:cardUseCompatPadding="true"
    tools:context=".secondActivity"
    android:layout_marginBottom="@dimen/_8sdp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:padding="@dimen/_8sdp"
            android:elevation="@dimen/_8sdp"
            >


            <TextView
                android:id="@+id/recycler_listname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36ssp"
                android:text="@string/PersonName"
                android:textColor="@color/white"
                android:textSize="@dimen/_26sdp"
                app:layout_constraintBottom_toTopOf="@id/expandable_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/recycler_listname"
                app:layout_constraintEnd_toEndOf="@id/recycler_listname"
                app:layout_constraintStart_toStartOf="@id/recycler_listname"
                app:layout_constraintTop_toBottomOf="@id/recycler_listname"
                >


                <ImageView
                    android:id="@+id/recycler_iv"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/persons"
                    android:src="@drawable/ic_person"
                    app:layout_constraintBottom_toBottomOf="@id/recycler_lm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/recycler_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/Name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintEnd_toStartOf="@id/recycler_more"
                    app:layout_constraintStart_toEndOf="@id/recycler_iv"
                    app:layout_constraintTop_toTopOf="@id/recycler_iv" />

                <ImageView
                    android:id="@+id/recycler_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    app:layout_constraintBottom_toBottomOf="@id/recycler_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/recycler_name"
                    app:layout_constraintTop_toTopOf="@id/recycler_name" />

                <TextView
                    android:id="@+id/recycler_lm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:ems="3"
                    android:maxLines="2"
                    android:text="@string/hello_first_recyclerview"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintBottom_toBottomOf="@id/recycler_iv"
                    app:layout_constraintEnd_toEndOf="@id/recycler_name"
                    app:layout_constraintStart_toStartOf="@id/recycler_name"
                    app:layout_constraintTop_toBottomOf="@id/recycler_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>